# vk-parser

./: CMakeLists.txt
config/: apikey.json
data/: groups.json  users.txt
include/: database.hpp  parser.hpp  recommender.hpp
src/: database.cpp  main.cpp  parser.cpp  recommender.cpp
